# HealthCare-System-Agentic-AI

Innovista-Backend/: .env.example  .gitignore  HISTORY_CHECK_GUIDE.md  HISTORY_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  TRIAGE_AGENT_README.md  app.py  booking_agent.py  check_history.py  conversations_practice.db  db.py  db_setup.py  debug_server.py  demo_history.py  equity.py  final_code_check.py  guide_agent.py  interactive_test.py  main.py  pakistan (1).csv  previous_code.md  pyproject.toml  quick_history_check.py  quick_test.py  requirements.txt  simple_db_check.py  startup_test.py  test_api.py  test_db.py  test_history_functionality.py  test_history_step_by_step.py  test_triage_agent.py  test_vector_search.py  update_all_specialists.py  utils.py  vercel.json  web_test.html
Innovista-Backend/medicura_agents/: __init__.py  about_agent.py  drug_interaction_agent.py  general_health_agent.py  medical_term_agent.py  report_analyzer_agent.py  symptom_analyzer_agent.py  triage_agent.py
Innovista-Backend/specialist_agents/: __init__.py  allergy_immunology_ai.py  cardiology_ai.py  dental_ai.py  dermatology_ai.py  drug_interaction_agent.py  endocrinology_ai.py  gastroenterology_ai.py  infectious_disease_ai.py  mental_health_ai.py  neurology_ai.py  ophthalmology_ai.py  orthopedics_ai.py  pediatrics_ai.py  pulmonology_ai.py  radiology_ai.py  vaccination_advisor_ai.py
Innovista-Frontend/: pnpm-lock.yaml
Innovista-Frontend/app/: layout.tsx  page.tsx
Innovista-Frontend/app/analytics/: page.tsx
Innovista-Frontend/components/: footer.tsx  navbar.tsx
(+8 files in other folders)
