[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "aiohttp>=3.12.15",
    "aiomysql>=0.2.0",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "google-generativeai>=0.8.5",
    "googlemaps>=4.10.0",
    "langdetect>=1.0.9",
    "mammoth>=1.9.1",
    "mangum>=0.19.0",
    "notion-client>=2.4.0",
    "openai-agents>=0.2.2",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.7.1",
    "streamlit>=1.50.0",
    "tenacity>=9.1.2",
    "tidb-vector>=0.0.15",
    "translate>=3.6.1",
    "translator>=0.0.9",
]
